--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-draw/v1.0.9/mapbox-gl-draw.css"
+      type="text/css"
+    />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.js"></script>
+    <link href="https://api.mapbox.com/mapbox-gl-js/v2.0.1/mapbox-gl.css" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/705438527d.js" crossorigin="anonymous"></script>
     <link
       href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css"
@@ -25,6 +33,7 @@
     <title>Find Your Way</title>
     <link rel="stylesheet" href="style.css" />
     <script defer="" src="./app.js"></script>
+    <script defer src="./map.js"></script>
   </head>
   <body>
     <div class="origin-container">
@@ -50,5 +59,7 @@
     <div class="bus-container">
       <ul class="my-trip"></ul>
     </div>
+
+    <div id="map" style="width: 100%; height: 100%; position: fixed"></div>
   </body>
 </html>
